--- a/setup.cfg
+++ b/setup.cfg
@@ -3,6 +3,9 @@
 [mypy-semver.*]
 ignore_missing_imports = True
 
+[mypy-scripts.*]
+ignore_missing_imports = True
+
 [flake8]
 max-line-length = 120
 per-file-ignores = __init__.py:F401
