added finally tag to clean up everything after build

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "ci_with_poetry"
-version = "v0.0.0"
+version = "0.0.0"
 description = "\" Example of Continuous Integration with poetry\""
 authors = ["Pierre-Jean Campigotto <pierrejean.campigotto@gmail.com>"]
 
