--- a/setup.cfg
+++ b/setup.cfg
@@ -6,6 +6,12 @@ ignore_missing_imports = True
 [mypy-scripts.*]
 ignore_missing_imports = True
 
+[mypy-git.*]
+ignore_missing_imports = True
+
+[mypy-poetry.*]
+ignore_missing_imports = True
+
 [flake8]
 max-line-length = 120
-per-file-ignores = __init__.py:F401
+per-file-ignores = __init__.py:F401,F403
